--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>!Add your title here!</title>
-    <link rel="stylesheet" href="https://mystore1.blob.core.windows.net/b2c/style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>My B2C Application</h1>
