Logo: changed logo back to the dog

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -11,11 +11,11 @@
 <body>
   <main class="marketing__maincontent" role="marketing main content">
     <header>
-      <img src="./assets/images/pug_logo_headline_1.svg" alt="">
+      <img src="./assets/images/PugSportsBannerTransparant.png" alt="The Pug Sports logo">
     </header>
     <section class="marketing__wrapper">
       <div class="marketing__container">
-        <img src="./assets/images/pug_logo_1.svg" alt="Pug sports mascot sports equipment">
+        <img src="./assets/images/pug_logo_2.svg" alt="Pug sports mascot">
       </div>
       <div class="marketing__copy">
         <div class="marketing__copy--wrapper">
