Desktop: added a navbar for desktop version

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -13,6 +13,19 @@
 <body>
   <header>
     <img src="./assets/images/PugSportsBannerTransparant.png" alt="The Pug Sports logo">
+    <nav>
+      <ul class="main-navigation__navitems">
+        <li class="main-navigation__navitem">
+          <a href="#">About</a>
+        </li>
+        <li class="main-navigation__navitem">
+          <a href="#">Try It Out</a>
+        </li>
+        <li class="main-navigation__navitem cta">
+          <a href="#">Sign Up For Beta</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="marketing__main" role="marketing main content">
     <section class="hero__wrapper">
