HeroSection: added a circle background for the hero section

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -27,15 +27,15 @@
       </ul>
     </nav>
   </header>
-  <main class="marketing__main" role="marketing main content">
+  <main class="marketing__main" role="marketing">
     <section class="hero__wrapper">
       <div class="hero__container">
         <img src="./assets/images/pug_logo_2.svg" alt="Pug sports mascot">
+        <p class="hero__copy--tagline">Pug Sports is a new way for you to find pick up games that flexes with
+          your schedule</p>
       </div>
       <div class="hero__copy">
-        <div class="hero__copy--wrapper">
-          <p class="hero__copy--tagline">Pug Sports is a new way for you to find pick up games that flexes with
-            your schedule</p>
+        <div class="hero__copy-inner">
           <p class="hero__copy--line-two">Do you like playing sports? Do you want to create or join pick up games
             around your area?</p>
           <p class="hero__copy--line-three">Pug sports is here to help! It's more than just a cute dog, its a way
