--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/normalize.css">
-  <link rel="stylesheet" type="text/css" media="(min-width: 1200px)" href="./assets/css/main.css">
-  <link rel="stylesheet" type="text/css" media="(max-width: 768px)" href="./assets/css/mobile.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
   <title>PugSports</title>
 </head>
 
@@ -14,62 +13,62 @@
   <header>
     <img src="./assets/images/PugSportsBannerTransparant.png" alt="The Pug Sports logo">
     <nav>
-      <ul class="main-navigation__navitems">
-        <li class="main-navigation__navitem">
+      <ul>
+        <li>
           <a href="#">About</a>
         </li>
-        <li class="main-navigation__navitem">
+        <li>
           <a href="#">Try It Out</a>
         </li>
-        <li class="main-navigation__navitem cta">
+        <li>
           <a href="#">Sign Up For Beta</a>
         </li>
       </ul>
     </nav>
   </header>
-  <main class="marketing__main" role="marketing">
-    <section class="hero__wrapper">
-      <div class="hero__container">
+  <main role="marketing">
+    <section>
+      <div>
         <img src="./assets/images/pug_logo_2.svg" alt="Pug sports mascot">
-        <p class="hero__copy--tagline">Pug Sports is a new way for you to find pick up games that flexes with
+        <p>Pug Sports is a new way for you to find pick up games that flexes with
           your schedule</p>
       </div>
-      <div class="hero__copy">
-        <div class="hero__copy-inner">
-          <p class="hero__copy--line-two">Do you like playing sports? Do you want to create or join pick up games
+      <div>
+        <div>
+          <p>Do you like playing sports? Do you want to create or join pick up games
             around your area?</p>
-          <p class="hero__copy--line-three">Pug sports is here to help! It's more than just a cute dog, its a way
+          <p>Pug sports is here to help! It's more than just a cute dog, its a way
             for you to enjoy pick up games with others!</p>
         </div>
       </div>
     </section>
-    <section class="feature__wrapper">
-      <div class="feature__container">
-        <div class="feature__card">
-          <div class="feature__container--img">
+    <section>
+      <div>
+        <div>
+          <div>
             <img src="./assets/images/undraw_basketball_agx4.svg" alt="A basketball game" width="250">
           </div>
-          <div class="feature__copy">
+          <div >
             <p>
               Stay Healthy. Make Friends.
             </p>
           </div>
         </div>
-        <div class="feature__card">
-          <div class="feature__container--img">
+        <div>
+          <div>
             <img src="./assets/images/undraw_home_run_oerh.svg" alt="A basketball game" width="250">
           </div>
-          <div class="feature__copy">
+          <div>
             <p>
               Use our interactive map to search for games.
             </p>
           </div>
         </div>
-        <div class="feature__card">
-          <div class="feature__container--img">
+        <div>
+          <div>
             <img src="./assets/images/undraw_bike_ride_7xit.svg" alt="A basketball game" width="250">
           </div>
-          <div class="feature__copy">
+          <div>
             <p>
               Stay connected to the people you play with.
             </p>
@@ -77,9 +76,9 @@
         </div>
       </div>
     </section>
-    <section class="beta-sign-up">
-      <div class="beta-sign-up__container">
-        <button class="beta-sign-up__button">Sign Up For Beta</button>
+    <section>
+      <div>
+        <button>Sign Up For Beta</button>
       </div>
     </section>
   </main>
