Typography: added typography styling in ./typography

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>
+  <header role="branding">
     <img src="./assets/images/PugSportsBannerTransparant.png" alt="The Pug Sports logo">
     <nav>
       <ul>
@@ -43,6 +43,7 @@
       </div>
     </section>
     <section>
+      <h2>Why Pug Sports?</h2>
       <div>
         <div>
           <div>
