--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -26,7 +26,7 @@
     <nav class="main-nav">
       <ul class="main-nav__navlist">
         <li class="main-nav__navitem">
-          <a class="main-nav__navlink" href="#">About</a>
+          <a class="main-nav__navlink" href="#about">About</a>
         </li>
         <li class="main-nav__navitem">
           <a class="main-nav__navlink" href="#">Try It</a>
@@ -41,55 +41,48 @@
     <section class="featured">
       <div class="featured__imgcontainer">
         <img src="./assets/images/pug_logo_2.svg" alt="Pug sports mascot">
-        <p class="featured__tagline--bigbold">Pug Sports is a new way for you to find pick up games that flexes with
-          your schedule</p>
       </div>
       <div class="featured__taglines">
+        <p class="featured__tagline--bigbold">Pug Sports is a new way for you to find pick up games that flexes with
+          your schedule</p>
           <p class="featured__tagline-1">Like playing sports? Want to create or join pick up games
             around your area?</p>
           <p class="featured__tagline-2">Pug sports is here to help! It's more than just a cute dog, its a way
             for you to enjoy pick up games with others!</p>
       </div>
     </section>
-    <section class="features-section">
+    <section id="about" class="features-section">
       <h2 class="features-section__title">Why Pug Sports?</h2>
-      <div>
-        <div>
-          <div>
-            <img src="./assets/images/undraw_basketball_agx4.svg" alt="A basketball game" width="250">
+        <article class="features-section__item">
+          <div class="features-section__img-container">
+            <img src="./assets/images/undraw_basketball_agx4.svg" alt="A basketball game">
           </div>
-          <div >
+          <div class="features-section__copy">
             <p>
               Stay Healthy. Make Friends.
             </p>
           </div>
-        </div>
-        <div>
-          <div>
-            <img src="./assets/images/undraw_home_run_oerh.svg" alt="A basketball game" width="250">
+        </article>
+        <article class="features-section__item">
+          <div class="features-section__img-container">
+            <img src="./assets/images/undraw_home_run_oerh.svg" alt="A basketball game">
           </div>
-          <div>
+          <div class="features-section__copy">
             <p>
-              Use our interactive map to easily search for games.
+              Interactive map to easily search for games.
             </p>
           </div>
-        </div>
-        <div>
-          <div>
-            <img src="./assets/images/undraw_bike_ride_7xit.svg" alt="A basketball game" width="250">
+        </article>
+        <article class="features-section__item">
+          <div class="features-section__img-container">
+            <img src="./assets/images/undraw_bike_ride_7xit.svg" alt="A basketball game">
           </div>
-          <div>
+          <div class="features-section__copy">
             <p>
               Stay connected to the people you play with.
             </p>
           </div>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div>
-        <button>Sign Up For Beta</button>
-      </div>
+        </article>
     </section>
   </main>
 </body>
