Featured(Buttons): added two feature buttons

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -49,6 +49,10 @@
             around your area?</p>
           <p class="featured__tagline-2">Pug sports is here to help! It's more than just a cute dog, its a way
             for you to enjoy pick up games with others!</p>
+            <div class="featured__buttons">
+              <button>Button</button>
+              <button>Button</button>
+            </div>
       </div>
     </section>
     <section id="about" class="features-section">
