Layout: continuing to work on layout

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -45,14 +45,20 @@
       <div class="featured__taglines">
         <p class="featured__tagline--bigbold">Pug Sports is a new way for you to find pick up games that flexes with
           your schedule</p>
-          <p class="featured__tagline-1">Like playing sports? Want to create or join pick up games
-            around your area?</p>
-          <p class="featured__tagline-2">Pug sports is here to help! It's more than just a cute dog, its a way
-            for you to enjoy pick up games with others!</p>
             <div class="featured__buttons">
-              <button>Button</button>
-              <button>Button</button>
+              <button id="cta-event" class="button">Button</button>
+              <button class="button">Button</button>
             </div>
+      </div>
+    </section>
+    <section class="additional">
+      <div class="additional__copy-container">
+        <p class="additional__tagline-1">Like playing sports? Want to create or join pick up games
+          around your area?</p>
+      </div>
+      <div class="additional__copy-container">
+        <p class="additional__tagline-2">Pug sports is here to help! It's more than just a cute dog, its a way
+          for you to enjoy pick up games with others!</p>
       </div>
     </section>
     <section id="about" class="features-section">
