added an extra tagline to addtional__taglines

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -57,6 +57,9 @@
           around your area?</p>
       </div>
       <div class="additional__copy-container">
+        <p class="additional__tagline-2">We think there's an easier way to meet up with folks to play your favorite sport with</p>
+      </div>
+      <div class="additional__copy-container">
         <p class="additional__tagline-2">Pug sports is here to help! It's more than just a cute dog, its a way
           for you to enjoy pick up games with others!</p>
       </div>
