--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -46,21 +46,19 @@
         <p class="featured__tagline--bigbold">Pug Sports is a new way for you to find pick up games that flexes with
           your schedule</p>
             <div class="featured__buttons">
-              <button id="cta-event" class="button">Button</button>
-              <button class="button">Button</button>
+              <button id="cta-event" class="button">Check Us Out</button>
             </div>
       </div>
     </section>
     <section class="additional">
       <div class="additional__copy-container">
-        <p class="additional__tagline-1">Like playing sports? Want to create or join pick up games
-          around your area?</p>
+        <p class="additional__tagline-1">Like playing sports? Want to find others that also enjoy the same sport?  </p>
       </div>
       <div class="additional__copy-container">
-        <p class="additional__tagline-2">We think there's an easier way to meet up with folks to play your favorite sport with</p>
+        <p class="additional__tagline-2">We think there's an easier way to meet up with folks to play your favorite sport with.</p>
       </div>
       <div class="additional__copy-container">
-        <p class="additional__tagline-2">Pug sports is here to help! It's more than just a cute dog, its a way
+        <p class="additional__tagline-2">More than just a cute dog, its a way
           for you to enjoy pick up games with others!</p>
       </div>
     </section>
@@ -72,7 +70,7 @@
           </div>
           <div class="features-section__copy">
             <p>
-              Stay Healthy. Make Friends.
+              Create and join pick up games in your area. Create a community!
             </p>
           </div>
         </article>
