--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -52,13 +52,13 @@
     </section>
     <section class="additional">
       <div class="additional__copy-container">
-        <p class="additional__tagline-1">Like playing sports? Want to find others that also enjoy the same sport?  </p>
+        <p class="additional__tagline">Like playing sports? Want to find others that also enjoy the same sport?  </p>
       </div>
       <div class="additional__copy-container">
-        <p class="additional__tagline-2">We think there's an easier way to meet up with folks to play your favorite sport with.</p>
+        <p class="additional__tagline">We think there's an easier way to meet up with folks to play your favorite sport with.</p>
       </div>
       <div class="additional__copy-container">
-        <p class="additional__tagline-2">More than just a cute dog, its a way
+        <p class="additional__tagline">More than just a cute dog, its a way
           for you to enjoy pick up games with others!</p>
       </div>
     </section>
