Keywords: grouped keywords into one meta tag

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -4,16 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="games">
-  <meta name="keywords" content="group activities">
-  <meta name="keywords" content="group sports">
-  <meta name="keywords" content="amateur sports">
-  <meta name="keywords" content="sports clubs">
-  <meta name="keywords" content="amateur hockey">
-  <meta name="keywords" content="amateur baseball">
-  <meta name="keywords" content="amateur basketball">
-  <meta name="keywords" content="amateur cycling">
-  <meta name="keywords" content="amateur soccer">
+  <meta name="keywords" content="games, group activities, group sports, amateur sports, sports clubs">
   <link rel="stylesheet" href="./assets/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
   <title>PugSports</title>
