--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -10,6 +10,20 @@
   <title>PugSports</title>
 </head>
 <body>
+  <section class="overlay"></section>
+  <section id="modal-beta" class="modal-beta" role="form">
+    <form id="modal-beta-form" class="modal-beta__form">
+      <div class="form-group">
+        <label for="Name">Name</label>
+        <input type="text" name="Name" placeholder="Enter your name">
+      </div>
+      <div class="form-group">
+        <label for="Email">Email</label>
+        <input type="text" name="Email" placeholder="Enter your email">
+      </div>
+      <input type="submit" value="Submit">
+    </form>
+  </section>
   <header role="branding" class="main-nav-container">
     <div class="main-nav-container__imgcontainer">
       <img src="./assets/images/PugSportsBannerTransparant.png" alt="The Pug Sports logo">
@@ -87,6 +101,7 @@
         </article>
     </section>
   </main>
+  <script src="../marketing-page/assets/js/main.js"></script>
 </body>
 
 </html>
