Added a modal with toggle-able state

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -10,8 +10,11 @@
   <title>PugSports</title>
 </head>
 <body>
-  <section class="overlay"></section>
-  <section id="modal-beta" class="modal-beta" role="form">
+  <section class="overlay none"></section>
+  <section id="modal-beta" class="modal-beta none" role="form">
+    <div class="modal-beta__title">
+      <h5>Sign Up For Our Beta</h5>
+    </div>
     <form id="modal-beta-form" class="modal-beta__form">
       <div class="form-group">
         <label for="Name">Name</label>
