Modal: should work now on live site

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -104,7 +104,7 @@
         </article>
     </section>
   </main>
-  <script src="../marketing-page/assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
