--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -59,15 +59,18 @@
       </div>
     </section>
     <section class="additional">
-      <div class="additional__copy-container">
-        <p class="additional__tagline">Like playing sports? Want to find others that also enjoy the same sport?  </p>
-      </div>
-      <div class="additional__copy-container">
-        <p class="additional__tagline">We think there's an easier way to meet up with folks to play your favorite sport with.</p>
-      </div>
-      <div class="additional__copy-container">
-        <p class="additional__tagline">More than just a cute dog, its a way
-          for you to enjoy pick up games with others!</p>
+      <h3 class="additional__title">What We Think</h3>
+      <div class="additional__flexparent">
+        <div class="additional__copy-container">
+          <p class="additional__tagline">Like playing sports? Want to find others that also enjoy the same sport?  </p>
+        </div>
+        <div class="additional__copy-container">
+          <p class="additional__tagline">We think there's an easier way to meet up with folks to play your favorite sport with.</p>
+        </div>
+        <div class="additional__copy-container">
+          <p class="additional__tagline">More than just a cute dog, its a way
+            for you to enjoy pick up games with others!</p>
+        </div>
       </div>
     </section>
     <section id="about" class="features-section">
