SVG: added svg img to header section to create a diagonal effect

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -57,6 +57,9 @@
               <button id="cta-event" class="button">Check Us Out</button>
             </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <polygon fill="#F7C948" points="100, 0 100, 100 0, 100"/>
+      </svg>
     </section>
     <section class="additional">
       <h3 class="additional__title">What We Think</h3>
