SVG: changed background color to dark for SVG for layout purposes

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -58,7 +58,7 @@
             </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-        <polygon fill="#F7C948" points="100, 0 100, 100 0, 100"/>
+        <polygon fill="#4F4F4F" points="100, 0 100, 100 0, 100"/>
       </svg>
     </section>
     <section class="additional">
@@ -120,5 +120,4 @@
   </main>
   <script src="./assets/js/main.js"></script>
 </body>
-
 </html>
