--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -118,6 +118,6 @@
       </section>
     </footer>
   </main>
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/main.js" type="module"></script>
 </body>
 </html>
