Removing uneccessary styles from features section

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,6 +74,9 @@
             for you to enjoy pick up games with others!</p>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <polygon fill="#4F4F4F" points="100, 0 100, 100 0, 100"/>
+      </svg>
     </section>
     <section id="about" class="features-section">
       <h2 class="features-section__title">Why Pug Sports?</h2>
