ModalForm: input elements now clear on submit

--- a/marketing-page/index.html
+++ b/marketing-page/index.html
@@ -14,16 +14,16 @@
     <div class="modal-beta__title">
       <h5>Sign Up For Our Beta</h5>
     </div>
-    <form id="modal-beta-form" class="modal-beta__form">
+    <form name="modalForm" id="modal-beta-form" class="modal-beta__form">
       <div class="form-group">
-        <label for="Name">Name</label>
-        <input type="text" name="Name" placeholder="Enter your name">
+        <label for="name">Name</label>
+        <input type="text" name="name" placeholder="Enter your name">
       </div>
       <div class="form-group">
-        <label for="Email">Email</label>
-        <input type="text" name="Email" placeholder="Enter your email">
+        <label for="email">Email</label>
+        <input type="text" name="email" placeholder="Enter your email">
       </div>
-      <input type="submit" value="Submit">
+      <input id="modalSubmit" type="submit" value="Submit">
     </form>
   </section>
   <header role="branding" class="main-nav-container">
